--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Heyo</h1>
 <p>The website is https://czaplicki-j.github.io/
-  
+  Make a GitHub Account and I'll add you as a contributer.
   </p>
 </body>
 </html>
