--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 <h1>Heyo</h1>
-<p>The website is https://czaplicki-j.github.io/
-  Make a GitHub Account and I'll add you as a contributer.
-  </p>
+  <p>The website is https://czaplicki-j.github.io/ </p>
+  <p>Make a GitHub Account and I'll add you as a contributer </p>
 </body>
 </html>
