--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>Heyo</h1>
   <p>The website is https://czaplicki-j.github.io/ </p>
-  <p>Make a GitHub Account and I'll add you as a contributer </p>
+  <p>Make a GitHub Account and I'll add you as a contributer. </p>
+  <p>There are 4 branches that have your name. Use them to upload your code. </p>
+  <p>They're a safety net just in case the code is bad.</p>
 </body>
 </html>
