--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <h1>Heyo</h1>
   <p>The website is https://czaplicki-j.github.io/ </p>
   <p>Make a GitHub Account and I'll add you as a contributer. </p>
-  <p>There are 4 branches that have your name. Use them to upload your code. </p>
-  <p>They're a safety net just in case the code is bad.</p>
-  <p>Download an editor for html. Name the html file as index.html and upload it to github when finished.</p>
-  <p>This is the file that changes the front screen</p>
+  <p>There are 4 branches that have your name. Use them to upload your code. They're a safety net just in case the code is bad.</p>
+  <p>Download an editor for html. Name the html file as index.html and upload it to github when finished. This is the file that changes the front screen</p>
 </body>
 </html>
