--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Discrete Structures Stuffz</title>
+  </head>
 <body>
 <h1>Heyo</h1>
   <p>The website is https://czaplicki-j.github.io/ </p>
