--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Discrete Structures Stuffz</title>
+    <style>
+      body{
+        background-image: url("https://czaplicki-j.github.io/90s.jpg");
+      }
+    </style>
   </head>
 <body>
 <h1>Heyo</h1>
