--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
 <body>
 <h1>Heyo</h1>
-  <p style="font-size:50px;">The website is https://czaplicki-j.github.io/</p>
-  <p>Make a GitHub Account and I'll add you as a contributer. </p>
-  <p>There are 4 branches that have your name. Use them to upload your code. They're a safety net just in case the code is bad.</p>
-  <p>Download an editor for html. Name the html file as index.html and upload it to github when finished. This is the file that changes the front screen</p>
-  <p>You could use the GitHub website or download the GitHub Desktop lab. Ask me if y'all have any questions</p>
+  <p style="color:red;font-size:50px;">The website is https://czaplicki-j.github.io/</p>
+  <p style="color:red;font-size:50px;">Make a GitHub Account and I'll add you as a contributer. </p>
+  <p style="color:red;font-size:50px;">There are 4 branches that have your name. Use them to upload your code. They're a safety net just in case the code is bad.</p>
+  <p style="color:red;font-size:50px;">Download an editor for html. Name the html file as index.html and upload it to github when finished. This is the file that changes the front screen</p>
+  <p style="color:red;font-size:50px;">You could use the GitHub website or download the GitHub Desktop lab. Ask me if y'all have any questions</p>
 </body>
 </html>
