--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Discrete Structures Stuffz</title>
+    <link rel="stylesheet" href="style.CSS" />
     <style>
       body{
         background-image: url("https://czaplicki-j.github.io/90s.jpg");
