--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Discrete Structures Stuffz</title>
-    <link rel="stylesheet" href="style.CSS" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
       body{
         background-image: url("https://czaplicki-j.github.io/90s.jpg");
