--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </head>
 <body>
 <h1>Heyo</h1>
-  <span class="shadow">
+  <div id="overlay">
   <p style="color:red;font-size:50px;">The website is https://czaplicki-j.github.io/</p>
   <p style="color:red;font-size:50px;">Make a GitHub Account and I'll add you as a contributer. </p>
   <p style="color:red;font-size:50px;">The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
   <p style="color:red;font-size:50px;">Ask me if y'all have any questions</p>
-  </span>
+ </div>
 </body>
 </html>
