--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Discrete Structures Stuffz</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <!--
+    <!-- commented out temporarily
     <style>
       body{
         background-image: url("https://czaplicki-j.github.io/90s.jpg");
