--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <body>
+  <div id="background"></div>
 <h1>Heyo</h1>
   <div id="overlay">
   <p style="color:red;font-size:50px;">The website is https://czaplicki-j.github.io/</p>
