--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <body>
-  <div id="background"></div>
+  <div id="background">
 <h1>Heyo</h1>
   <span class="shadow">
   <p style="color:red;font-size:50px;">The website is https://czaplicki-j.github.io/</p>
@@ -13,5 +13,6 @@
   <p style="color:red;font-size:50px;">The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
   <p style="color:red;font-size:50px;">Ask me if y'all have any questions</p>
 </span>
+ </div>
 </body>
 </html>
