--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <h1>Heyo</h1>
   <span class="shadow">
-  <p style="color:red;font-size:50px;">The website is https://czaplicki-j.github.io/</p>
-  <p style="color:red;font-size:50px;">Make a GitHub Account and I'll add you as a contributer. </p>
-  <p style="color:red;font-size:50px;">The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
-  <p style="color:red;font-size:50px;">Ask me if y'all have any questions</p>
+  <p>The website is https://czaplicki-j.github.io/</p>
+  <p>Make a GitHub Account and I'll add you as a contributer. </p>
+  <p>The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
+  <p>Ask me if y'all have any questions</p>
 </span>
 </body>
 </div>
