--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p>Make a GitHub Account and I'll add you as a contributer. </p>
   <p>The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
   <p>Ask me if y'all have any questions</p>
+  <p>Jakub sucks. I am cooler. - Claude 2019</p>
 </span>
 </body>
 </div>
