--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
   <p>Ask me if y'all have any questions</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
+  <p>I am the best though. - Ayden 2019</p>
 </span>
 </body>
 </div>
