--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p>Ask me if y'all have any questions</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
+   <button onclick="window.location.href = 'https://w3docs.com';">Click Here</button>
 </span>
 </body>
 </div>
