--- a/page-2.html
+++ b/page-2.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
 <body>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 <h1>Rules</h1>
 <p>these are some rules</p>
 </body>
