--- a/page-2.html
+++ b/page-2.html
@@ -1,7 +1,10 @@
 <!Doctype html>
 <html>
 <body>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <head>
+    <title>page2</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>
 <h1>Rules</h1>
 <p>these are some rules</p>
 </body>
