--- a/page-2.html
+++ b/page-2.html
@@ -1,8 +1,9 @@
 <!Doctype html>
 <html>
+<div id="background">
 <body>
   <head>
-    <title>page2</title>
+    <title>page-2</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <h1>Rules</h1>
