--- a/page-2.html
+++ b/page-2.html
@@ -1,12 +1,13 @@
 <!Doctype html>
 <html>
-<div id="background">
 <body>
   <head>
-    <title>page-2</title>
+    <title>page2</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <h1>Rules</h1>
 <p>these are some rules</p>
+<h2>Elementary Rules</h2>
+<h2>General Rules</h2>
 </body>
 </html>
