--- a/page-2.html
+++ b/page-2.html
@@ -7,7 +7,11 @@
   </head>
 <h1>Rules</h1>
 <p>these are some rules</p>
-<h2>Elementary Rules</h2>
+<h2>Elementary Rules: combine the probabilities for disjoint events</h2>
+  <h3>The Elementary Addition Rule</h3>
+  <h3>The Elementary Multiplication Rule</h3>
 <h2>General Rules</h2>
+  <h3>The General Addition Rule</h3>
+  <h3>The General Multiplication Rule</h3>
 </body>
 </html>
