--- a/page-2.html
+++ b/page-2.html
@@ -7,6 +7,7 @@
   </head>
 <h1>Rules</h1>
 <p>these are some rules</p>
+<h2>Complement</h2>
 <h2>Elementary Rules: combine the probabilities for disjoint events</h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
