--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <div id="background">
   <head>
-    <title>Discrete Structures Stuffz</title>
+    <title>Ayden, Claude, and Jakub's PowerProbability</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <body>
-<h1>Heyo</h1>
+<h1>Logo goes here</h1>
   <span class="shadow">
   <p>The website is https://czaplicki-j.github.io/</p>
   <p>Make a GitHub Account and I'll add you as a contributer. </p>
