--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <div id="background">
+ <div id="background">
   <head>
-    <title>Ayden, Claude, and Jakub's PowerProbability</title>
+    <title>PowerProbability</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="shortcut icon" href="logo.ico" />
   </head>
 <body>
 <h1>Logo goes here</h1>
   <span class="shadow">
   <p>The website is https://czaplicki-j.github.io/</p>
-  <p>Make a GitHub Account and I'll add you as a contributer. </p>
-  <p>The html file that holds all the code is index.html, you can edit it from the github repository website. This is the file that changes the front screen</p>
-  <p>Ask me if y'all have any questions</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
    <button onclick="window.location.href = 'page-2.html';">Click Here</button>
