--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>PowerProbability</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="shortcut icon" href="logo.ico" />
+    <link rel="shortcut icon" href="logo1.ico" />
   </head>
 <body>
 <h1>Logo goes here</h1>
