--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     A. <script src="/js/powerNumGenerator.js"></script>
     </div>
   <p>The website is https://czaplicki-j.github.io/</p>
+  <p>Works great on Chrome, not so great on Firefox, sorry if it's a bit weird :(</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
     <script src="/js/dashGenerator.js"></script>
