--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <div id="headerBack">
     <title>PowerProbability</title>
+          </div>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
