--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <div id="headerBack">
+      <div class="headerBack"></div>
     <title>PowerProbability</title>
-          </div>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
