--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <div class="headerBack"></div>
+      <div id="headerBack">
     <title>PowerProbability</title>
+        </div>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
