--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
     <script src="/js/dashGenerator.js"></script>
-   <button onclick="window.location.href = '/html/page-2.html';">Next</button>
+   <button onclick="window.location.href = 'page-2.html';">Next</button>
 </body>
 </div>
 </html>
