--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>PowerProbability</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
 <body>
@@ -18,6 +19,12 @@
     <div id="powerNumbers">
     A. <script src="/js/powerNumGenerator.js"></script>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <a href="#">Rules</a>
+        </div>
+      </div>
   <p>Works great on Chrome, not so great on Firefox, sorry if it's a bit weird :(</p>
   <p>also dashes dont align (yet)</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
