--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-          <a href="#">Rules</a>
+          <a href="page-2.html">Rules</a>
+          
         </div>
       </div>
   <p>Works great on Chrome, not so great on Firefox, sorry if it's a bit weird :(</p>
