--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div id="powerNumbers">
     A. <script src="/js/powerNumGenerator.js"></script>
     </div>
-    <div class="dropdown">
+    <div class="Menu">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-          <a href="page-2.html">Rules</a>
-          
+          <a href="index.html">Home</a>
+          <a href="page-2.html">Rules</a>          
         </div>
       </div>
   <p>Works great on Chrome, not so great on Firefox, sorry if it's a bit weird :(</p>
