--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="powerNumbers">
     A. <script src="/js/powerNumGenerator.js"></script>
     </div>
-    <div class="Menu">
-        <button class="dropbtn">Dropdown</button>
+    <div class="dropdown">
+        <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
           <a href="index.html">Home</a>
           <a href="page-2.html">Rules</a>          
