--- a/page-2.html
+++ b/page-2.html
@@ -4,7 +4,13 @@
   <head>
     <title>page2</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
+  </head>    
+  <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="page-2.html">Rules</a>          
+      </div>
 <h1>Rules</h1>
 <p>these are some rules</p>
 <h2>Complement</h2>
