--- a/page-2.html
+++ b/page-2.html
@@ -4,6 +4,7 @@
   <head>
     <title>page2</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
   </head>    
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
