--- a/index.html
+++ b/index.html
@@ -11,28 +11,33 @@
     www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov 
     </div>
 <h1>*PowerProbability Logo goes here*</h1>
+    
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
+    <div id="dash">
 <script src="/js/dashGenerator.js"></script>
-
-    <p>POWER PLAY</p>  
-    <div id="powerNumbers">
-    A. <script src="/js/powerNumGenerator.js"></script>
-    </div>
-    <div class="dropdown">
+        </div>
+<div class="dropdown">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
           <a href="index.html">Home</a>
           <a href="page-2.html">Rules</a>          
         </div>
+    </div>
+    <p>POWER PLAY</p>  
+    <div id="powerNumbers">
+        A. <script src="/js/powerNumGenerator.js"></script> 
+        <br>
+    </div>
       </div>
-  <p>Works great on Chrome, not so great on Firefox, sorry if it's a bit weird :(</p>
-  <p>also dashes dont align (yet)</p>
+  <p>Dashes now Work!!1!1!</p>
+  <p>*Add more or less what we are going to teach*</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
+     <div id="dash">
     <script src="/js/dashGenerator.js"></script>
-   <button onclick="window.location.href = 'page-2.html';">Next</button>
+    </div>
 </body>
 </div>
 </html>
