--- a/page-2.html
+++ b/page-2.html
@@ -1,6 +1,9 @@
 <!Doctype html>
 <html>
 <body>
+     <div id="vertical">
+    www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov 
+    </div>
   <head>
     <title>page2</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -12,6 +15,7 @@
         <a href="index.html">Home</a>
         <a href="page-2.html">Rules</a>          
       </div>
+    </div>
 <h1>Rules</h1>
 <p>these are some rules</p>
 <h2>Complement</h2>
