--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
       </div>
   <p>Dashes now Work!!1!1!</p>
-  <p>*Add more or less what we are going to teach*</p>
+  <p>B. *Add more or less what we are going to teach*</p>
   <p>Jakub sucks. I am cooler. - Claude 2019</p>
   <p>I am the best though. - Ayden 2019</p>
      <div id="dash">
