--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body>
     <div id="vertical">
-    www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov 
+    <script src="/js/nygovGen.js"></script> 
     </div>
 <h1>*PowerProbability Logo goes here*</h1>
     
