--- a/page-2.html
+++ b/page-2.html
@@ -6,6 +6,7 @@
     </div>
   <head>
     <title>page2</title>
+       <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
   </head>    
