--- a/page-2.html
+++ b/page-2.html
@@ -25,5 +25,7 @@
 <h2>General Rules</h2>
   <h3>The General Addition Rule</h3>
   <h3>The General Multiplication Rule</h3>
+<h2>Binomial Distribution</h2>
+    <h3>Formula</h3>
 </body>
 </html>
