--- a/page-2.html
+++ b/page-2.html
@@ -23,7 +23,7 @@
 <h2>Elementary Rules: combine the probabilities for disjoint events</h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
-<h2>General Rules</h2>
+<h2><font color="red">General Rules</font></h2>
   <h3>The General Addition Rule</h3>
   <h3>The General Multiplication Rule</h3>
 <h2>Binomial Distribution</h2>
