--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <br>
     </div>
       </div>
-  <p>Dashes now Work!!1!1! (except on mobile)</p>
-  <p>*Add more or less what we are going to teach*</p>
-  <p>Jakub sucks. I am cooler. - Claude 2019</p>
-  <p>I am the best though. - Ayden 2019</p>
+  <p>What even is Probability?</p>
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
