--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br>
     </div>
       </div>
-  <p>What even is Probability?</p>
+  <p><font color="red">What even is Probability?</font></p>
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
