--- a/page-2.html
+++ b/page-2.html
@@ -19,14 +19,15 @@
     </div>
 <h1>Rules</h1>
 <p>these are some rules</p>
-<h2>Complement</h2>
-<h2>Elementary Rules: combine the probabilities for disjoint events</h2>
+
+<h2><font color="red"></font>Elementary Rules: combine the probabilities for disjoint events<font></h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
 <h2><font color="red">General Rules</font></h2>
   <h3>The General Addition Rule</h3>
   <h3>The General Multiplication Rule</h3>
-<h2>Binomial Distribution</h2>
+<h2><font color="red">Complement</font></h2>
+<h2><font color="red">Binomial Distribution</font></h2>
     <h3>Formula</h3>
 </body>
 </html>
