--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="vertical">
     <script src="/js/nygovGen.js"></script> 
     </div>
-<h1>*PowerProbability Logo goes here*</h1>
-    
+  <div id="background">
+    </div>
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
