--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="/js/nygovGen.js"></script> 
     </div>
   <div id="background">
+    <p>sfgsdfzg</p>
     </div>
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
