--- a/page-2.html
+++ b/page-2.html
@@ -9,7 +9,8 @@
        <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
-  </head>    
+    <link rel="stylesheet" type="text/css" href="/css/page2fonts.css">
+  </head> 
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
