--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
 <body>
-   <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" height="300">
+   <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" class="center">
     <div id="vertical">
     <script src="/js/nygovGen.js"></script> 
     </div>
