--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>PowerProbability</title>
+    <!-----------------------------------REFERENCES--------------------------------------------------------->
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
     <link rel="shortcut icon" href="logo12.ico" />
+    <!-----------------------------------REFERENCES--------------------------------------------------------->
   </head>
 <body>
    <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" height="300">
