--- a/page-2.html
+++ b/page-2.html
@@ -8,7 +8,7 @@
     <title>page2</title>
        <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="/css/page2fonts.css">
   </head> 
