--- a/page-2.html
+++ b/page-2.html
@@ -23,7 +23,7 @@
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-    <p>Prob(E)(|E|)/(|S|)</p>
+    <p>Prob(E)<sup>(|E|)</sup>&frasl;<sub>(|S|)</sub></p>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
