--- a/page-2.html
+++ b/page-2.html
@@ -10,7 +10,7 @@
        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
-    <link rel="stylesheet" type="text/css" href="/css/page2fonts.css">
+    <link rel="stylesheet" type="text/css" href="/css/page2font.css">
   </head> 
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
