--- a/page-2.html
+++ b/page-2.html
@@ -10,7 +10,7 @@
        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
-    <link rel="stylesheet" type="text/css" href="/css/page2font.css">
+    <link rel="stylesheet" type="text/css" href="/css/page2.css">
   </head> 
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
@@ -23,7 +23,11 @@
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-    <p>Prob(E)<sup>(|E|)</sup>&frasl;<sub>(|S|)</sub></p>
+    Prob(E)<div class="frac">
+      <p><span>|E|</span>
+      <span class="sybol">/</span></p>
+      <span class="bottom">2</span>
+    </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
