--- a/page-2.html
+++ b/page-2.html
@@ -25,8 +25,8 @@
 <h2><font color="red">Probabilty Formula</font></h2>
     Prob(E)<div class="frac">
       <p><span>|E|</span>
-      <span class="sybol">/</span></p>
-      <span class="bottom">2</span>
+      <span class="symbol">/</span></p>
+      <span class="bottom">|s|</span>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
