--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </div>
       </div>
   <p><font color="red">What even is Probability?</font></p>
+  *Add Definition*
+  Probability of getting the powerball number correct and $4 payout: 1/26 = .0384 = 38.4%
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
