--- a/page-2.html
+++ b/page-2.html
@@ -7,8 +7,7 @@
   <head>
     <title>page2</title>
        <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
-       <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+       <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="/css/page2.css">
   </head> 
