--- a/page-2.html
+++ b/page-2.html
@@ -24,8 +24,9 @@
 <h2><font color="red">Probabilty Formula</font></h2>
     Prob(E)<div class="frac">
       <p><span>|E|</span>
-      <span class="symbol">/</span></p>
+      <span class="symbol">/</span>
       <span class="bottom">|s|</span>
+      </p>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
