--- a/page-2.html
+++ b/page-2.html
@@ -22,8 +22,8 @@
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-    Prob(E)<div class="frac">
-      <p><span>|E|</span>
+    <div class="frac">
+      <p>Prob(E)<span>|E|</span>
       <span class="symbol">/</span>
       <span class="bottom">|S|</span></p>
     </div>
