--- a/page-2.html
+++ b/page-2.html
@@ -25,7 +25,7 @@
     <div class="frac">
       <p>Prob(E)<span>|E|</span>
       <span class="symbol">/</span>
-      <span class="bottom">|S|</span></p>
+      <span class="bottom">S</span></p>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
