--- a/page-2.html
+++ b/page-2.html
@@ -23,9 +23,9 @@
 
 <h2><font color="red">Probabilty Formula</font></h2>
     <div class="frac">
-      <p><span>|E|</span>
-      <span class="symbol">/</span>
-      <span class="bottom">|S|</span></p>
+      <p>Prob(E)<span>|E|</span>
+      <span class="symbol">/</span></p>
+      <span class="bottom">|S|</span>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
