--- a/page-2.html
+++ b/page-2.html
@@ -23,8 +23,8 @@
 
 <h2><font color="red">Probabilty Formula</font></h2>
     <div class="frac">
-      <p>Prob(E)<span>|E|</span>
-      <span class="symbol">/</span></p>
+      <p>Prob(E)<span>|E|</span></p>
+      <span class="symbol">/</span>
       <span class="bottom">|S|</span>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
