--- a/page-2.html
+++ b/page-2.html
@@ -23,7 +23,7 @@
 
 <h2><font color="red">Probabilty Formula</font></h2>
     <div class="frac">
-      <p>Prob(E)<span>|E|</span></p>
+      Prob(E)<span>|E|</span>
       <span class="symbol">/</span>
       <span class="bottom">|S|</span>
     </div>
