--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>PowerProbability</title>
-    <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
     <link rel="shortcut icon" href="logo12.ico" />
   </head>
 <body>
     <div id="vertical">
-    <script src="/js/nygovGen.js"></script> 
+    <script src="/js/nygovGen.js"></script>
     </div>
-  <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" class="center">
+  <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" width="1800" class="center">
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
@@ -22,12 +22,12 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
           <a href="index.html">Home</a>
-          <a href="page-2.html">Rules</a>          
+          <a href="page-2.html">Rules</a>
         </div>
     </div>
-    <p>POWER PLAY</p>  
+    <p>POWER PLAY</p>
     <div id="powerNumbers">
-        A. <script src="/js/powerNumGenerator.js"></script> 
+        A. <script src="/js/powerNumGenerator.js"></script>
         <br>
     </div>
       </div>
