--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
+          <script> window.innerWidth </script> 
     <div id="dash">
 <script src="/js/dashGenerator.js"></script>
         </div>
