--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
-          <script> window.innerWidth </script> 
+        <br>
+          <script src="/js/returnWidth.js"></script> 
     <div id="dash">
 <script src="/js/dashGenerator.js"></script>
         </div>
